2002-03-18  John Sullivan  <sullivan@apple.com>

	Imposed age limit on history items saved to/loaded from disk.
	Sped up history loading by reversing list before processing entries.

	* History.subproj/IFWebHistoryPrivate.m: 
	(+[IFWebHistoryPrivate initialize]): Register default for age limit.
	(-[IFWebHistoryPrivate _ageLimitDate]): New convenience method, returns a date older
	than any history entry that should be stored/loaded.
	(-[IFWebHistoryPrivate arrayRepresentation]): skip too-old dates.
	(-[IFWebHistoryPrivate _loadHistoryGuts:]), (-[IFWebHistoryPrivate _saveHistoryGuts:]): 
	Broke into separate methods to make timing wrapper less messy. Respect age limit.
	Report number of items saved/loaded in timing message.
	(-[IFWebHistoryPrivate loadHistory]), (-[IFWebHistoryPrivate saveHistory]):
	use broken-out _guts methods.
	* WebKit.pbproj/project.pbxproj: version wars

2002-03-16  Richard Williamson  <rjw@apple.com>

        Fixed scroll bar flash.  Add provisional view to go along with
        provisional widget.
        
	* WebView.subproj/IFWebView.mm: (-[IFWebView provisionalDataSourceChanged:]),
	(-[IFWebView dataSourceChanged:]):

2002-03-16  Richard Williamson  <rjw@apple.com>

        Fixed error handling.  Fixed most frame loading problems.
        Cleaned up frame state machine.
        Moved IFMainURLHandleClient from WebCore.
        
	* Misc.subproj/IFError.m: (-[IFError description]):
	* WebKit.pbproj/project.pbxproj:
	* WebView.subproj/IFBaseWebController.mm: (-[IFBaseWebController
	receivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController
	receivedError:forResource:partialProgress:fromDataSource:]),
	(-[IFBaseWebController locationChangeDone:forFrame:]):
	* WebView.subproj/IFBaseWebControllerPrivate.h:
	* WebView.subproj/IFBaseWebControllerPrivate.mm: (-[IFBaseWebController
	_receivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController
	_mainReceivedProgress:forResource:fromDataSource:]), (-[IFBaseWebController